scaffold the crud pages

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Data Source=RazorPagesMovieContext-01621754-1524-4a89-8fb8-bbad91be751a.db"
+  }
 }
